# Diwina_path_integral

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig2  HOWTO_INSTALL.md  HoloScale.tsv  README.md  chapeaux.cpp  config.h.in  correction.cpp  default-settings.yml  detector.h  direct2d_sum.cpp  electrostatics.h  exportHoloPhase.cpp  exportMagIntegrals.cpp  exportRatioGrayScaleImage.cpp  exportRatioRGBscaleImage.cpp  expression_parser.h  fem.h  fem2d.h  femutil.cpp  fmm2d_sum.cpp  log  main.cpp  mesh.h  read.cpp  rfmm2d.f90  rotation.h  scalfmm2d_sum.cc  scalfmm2d_sum.cpp  scalfmm_2d.hpp  sensor.h  settings.cpp  settings.h  smoke-test.py  smoke-test.yml  t  write_png.cpp  write_png.h
.github/workflows/: tests.yml
Docs/: meeting_20250710.pptx
TODO/: mesh.cpp
examples/: README.md
examples/oneSphere_D100nm_Js1T_v1/: init_cfg.py  one_sphere.geo  settings.yml  settings_ray.yml  sim_Holo.out  sim_M_integrals.out  sol.in
examples/tube/: tube.py  tube.yml
examples/uni_hollow_sphere/: hollow_sphere.geo  hollow_sphere.py  uni_hollow_sphere.yml
examples/uni_sphere/: HOWTO_METADATA  init_cfg.py  sol.in  unisphere.py  unisphere.yml  unisphere_ray.yml
src/: direct2d_sum.cpp  element.h  exportHoloPhase.cpp  exportMagIntegrals.cpp  exportMagIntegrals_nd_HoloPhase.cpp  exportRatioGrayScaleImage.cpp  expression_parser.cpp  facette.h  fem.h  fem2d.h  femutil.cpp  geo.h  node.h  pathIntegral.cpp  pathIntegral.h  read.cpp  rotation.h  scalfmm3.hpp  scalfmm_2d.hpp  settings.h  termcolor.h  tetra.cpp  tetra.h  write_png.cpp
tools/: HOWTO_FORCE_NVIDIA_GPU_USAGE  HOWTO_INSERT_NODES_COORDS  HOWTO_PYTHON_PATH  README.md  contours.py  fg-gensol.py  fg-gensol_user-guide.txt  fg-gensol_v2.py  fg-yml.py  fmit-GUI  fmit-calculator  fmit-fresnel  fmit-png-extractor  fmit-png-viewer  fresnel_from_png_phase.py  fresnel_from_png_phase_buggy.py  msh-explorer.py  phase_contours.py  png_viewer.py  run_path_integral  run_path_integral.py  teste.py  yml-editor-extended-clipping.py  yml-editor-extended.py  yml-editor-extended.py.old  yml-editor-extended_v2.py  yml-editor-extended_v3.py  yml-editor-extended_v4.py  yml-editor.py
